test/runnable/nortti_std.d
/**
 * EXTRA_SOURCES: imports/nortti.d
 */

// Real test is in imports/nortti.d
import nortti;

int main()
{
    return testNORTTI();
}
