test/fail_compilation/nortti_bc.d
/**
 * EXTRA_SOURCES imports/nortti.d
 * REQUIRED_ARGS: -betterC
 */

// Real test is in imports/nortti.d
